// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic options should not show prev/next buttons when there is only one slide 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "position": "relative",
      },
      {
        "maxHeight": undefined,
        "maxWidth": undefined,
      },
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <ScrollView
      automaticallyAdjustContentInsets={false}
      bounces={false}
      horizontal={true}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      pagingEnabled={true}
      removeClippedSubviews={true}
      scrollEnabled={true}
      scrollEventThrottle={16}
      scrollsToTop={false}
      showsHorizontalScrollIndicator={false}
      showsVerticalScrollIndicator={false}
    >
      <View
        accessible={true}
        key="00"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".0"
        >
          <Text>
            1
          </Text>
        </View>
      </View>
    </ScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 25,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        key="0/.0"
        style={
          {
            "backgroundColor": "#333",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
    </View>
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "left": 0,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "position": "absolute",
            "top": 0,
          },
          {
            "height": 1334,
            "width": 750,
          },
        ]
      }
    >
      <View />
      <View />
    </View>
  </View>
</View>
`;

exports[`basic options should render with default settings 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "position": "relative",
      },
      {
        "maxHeight": undefined,
        "maxWidth": undefined,
      },
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <ScrollView
      automaticallyAdjustContentInsets={false}
      bounces={false}
      horizontal={true}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      pagingEnabled={true}
      removeClippedSubviews={true}
      scrollEnabled={true}
      scrollEventThrottle={16}
      scrollsToTop={false}
      showsHorizontalScrollIndicator={false}
      showsVerticalScrollIndicator={false}
    >
      <View
        accessible={true}
        key="00"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".0"
        >
          <Text>
            1
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        key="11"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".1"
        >
          <Text>
            2
          </Text>
        </View>
      </View>
    </ScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 25,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        key="0/.0"
        style={
          {
            "backgroundColor": "#333",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
      <View
        key="1/.1"
        style={
          {
            "backgroundColor": "rgba(0,0,0,.2)",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
    </View>
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "left": 0,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "position": "absolute",
            "top": 0,
          },
          {
            "height": 1334,
            "width": 750,
          },
        ]
      }
    >
      <View />
      <TouchableOpacity
        accessibilityLabel="Next"
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        testID="PinarNextButton"
      >
        <Text
          accessibilityLabel="Next"
          accessible={true}
          style={
            {
              "color": "#333",
              "fontSize": 50,
              "padding": 20,
            }
          }
        >
          ›
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`basic options should support custom a11y labels for prev/next controls 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "position": "relative",
      },
      {
        "maxHeight": undefined,
        "maxWidth": undefined,
      },
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <ScrollView
      automaticallyAdjustContentInsets={false}
      bounces={false}
      horizontal={true}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      pagingEnabled={true}
      removeClippedSubviews={true}
      scrollEnabled={true}
      scrollEventThrottle={16}
      scrollsToTop={false}
      showsHorizontalScrollIndicator={false}
      showsVerticalScrollIndicator={false}
    >
      <View
        accessible={true}
        key="00"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".0"
        >
          <Text>
            1
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        key="11"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".1"
        >
          <Text>
            2
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        key="22"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".2"
        >
          <Text>
            3
          </Text>
        </View>
      </View>
    </ScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 25,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        key="0/.0"
        style={
          {
            "backgroundColor": "rgba(0,0,0,.2)",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
      <View
        key="1/.1"
        style={
          {
            "backgroundColor": "#333",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
      <View
        key="2/.2"
        style={
          {
            "backgroundColor": "rgba(0,0,0,.2)",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
    </View>
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "left": 0,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "position": "absolute",
            "top": 0,
          },
          {
            "height": 1334,
            "width": 750,
          },
        ]
      }
    >
      <TouchableOpacity
        accessibilityLabel="custom prev label"
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        testID="PinarPrevButton"
      >
        <Text
          accessibilityLabel="custom prev label"
          accessible={true}
          style={
            {
              "color": "#333",
              "fontSize": 50,
              "padding": 20,
            }
          }
        >
          ‹
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityLabel="custom next label"
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        testID="PinarNextButton"
      >
        <Text
          accessibilityLabel="custom next label"
          accessible={true}
          style={
            {
              "color": "#333",
              "fontSize": 50,
              "padding": 20,
            }
          }
        >
          ›
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`basic options should support disabling accessibility 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "position": "relative",
      },
      {
        "maxHeight": undefined,
        "maxWidth": undefined,
      },
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <ScrollView
      automaticallyAdjustContentInsets={false}
      bounces={false}
      horizontal={true}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      pagingEnabled={true}
      removeClippedSubviews={true}
      scrollEnabled={true}
      scrollEventThrottle={16}
      scrollsToTop={false}
      showsHorizontalScrollIndicator={false}
      showsVerticalScrollIndicator={false}
    >
      <View
        accessible={false}
        key="01"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".1"
        >
          <Text>
            2
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        key="10"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".0"
        >
          <Text>
            1
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        key="21"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".1"
        >
          <Text>
            2
          </Text>
        </View>
      </View>
      <View
        accessible={false}
        key="30"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".0"
        >
          <Text>
            1
          </Text>
        </View>
      </View>
    </ScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 25,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        key="0/.0"
        style={
          {
            "backgroundColor": "#333",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
      <View
        key="1/.1"
        style={
          {
            "backgroundColor": "rgba(0,0,0,.2)",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
    </View>
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "left": 0,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "position": "absolute",
            "top": 0,
          },
          {
            "height": 1334,
            "width": 750,
          },
        ]
      }
    >
      <TouchableOpacity
        accessibilityLabel="Previous"
        accessibilityRole="button"
        accessible={false}
        onPress={[Function]}
        testID="PinarPrevButton"
      >
        <Text
          accessibilityLabel="Previous"
          accessible={false}
          style={
            {
              "color": "#333",
              "fontSize": 50,
              "padding": 20,
            }
          }
        >
          ‹
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityLabel="Next"
        accessibilityRole="button"
        accessible={false}
        onPress={[Function]}
        testID="PinarNextButton"
      >
        <Text
          accessibilityLabel="Next"
          accessible={false}
          style={
            {
              "color": "#333",
              "fontSize": 50,
              "padding": 20,
            }
          }
        >
          ›
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`basic options should support disabling dots 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "position": "relative",
      },
      {
        "maxHeight": undefined,
        "maxWidth": undefined,
      },
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <ScrollView
      automaticallyAdjustContentInsets={false}
      bounces={false}
      horizontal={true}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      pagingEnabled={true}
      removeClippedSubviews={true}
      scrollEnabled={true}
      scrollEventThrottle={16}
      scrollsToTop={false}
      showsHorizontalScrollIndicator={false}
      showsVerticalScrollIndicator={false}
    >
      <View
        accessible={true}
        key="00"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".0"
        >
          <Text>
            1
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        key="11"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".1"
        >
          <Text>
            2
          </Text>
        </View>
      </View>
    </ScrollView>
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "left": 0,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "position": "absolute",
            "top": 0,
          },
          {
            "height": 1334,
            "width": 750,
          },
        ]
      }
    >
      <View />
      <TouchableOpacity
        accessibilityLabel="Next"
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        testID="PinarNextButton"
      >
        <Text
          accessibilityLabel="Next"
          accessible={true}
          style={
            {
              "color": "#333",
              "fontSize": 50,
              "padding": 20,
            }
          }
        >
          ›
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`basic options should support disabling prev/next controls 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "position": "relative",
      },
      {
        "maxHeight": undefined,
        "maxWidth": undefined,
      },
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <ScrollView
      automaticallyAdjustContentInsets={false}
      bounces={false}
      horizontal={true}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      pagingEnabled={true}
      removeClippedSubviews={true}
      scrollEnabled={true}
      scrollEventThrottle={16}
      scrollsToTop={false}
      showsHorizontalScrollIndicator={false}
      showsVerticalScrollIndicator={false}
    >
      <View
        accessible={true}
        key="00"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".0"
        >
          <Text>
            1
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        key="11"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".1"
        >
          <Text>
            2
          </Text>
        </View>
      </View>
    </ScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 25,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        key="0/.0"
        style={
          {
            "backgroundColor": "#333",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
      <View
        key="1/.1"
        style={
          {
            "backgroundColor": "rgba(0,0,0,.2)",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`basic options should support loop option 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "position": "relative",
      },
      {
        "maxHeight": undefined,
        "maxWidth": undefined,
      },
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <ScrollView
      automaticallyAdjustContentInsets={false}
      bounces={false}
      horizontal={true}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      pagingEnabled={true}
      removeClippedSubviews={true}
      scrollEnabled={true}
      scrollEventThrottle={16}
      scrollsToTop={false}
      showsHorizontalScrollIndicator={false}
      showsVerticalScrollIndicator={false}
    >
      <View
        accessible={true}
        key="02"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".2"
        >
          <Text>
            3
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        key="10"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".0"
        >
          <Text>
            1
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        key="21"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".1"
        >
          <Text>
            2
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        key="32"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".2"
        >
          <Text>
            3
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        key="40"
        style={
          {
            "height": 1334,
            "width": 750,
          }
        }
      >
        <View
          key=".0"
        >
          <Text>
            1
          </Text>
        </View>
      </View>
    </ScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 25,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        key="0/.0"
        style={
          {
            "backgroundColor": "#333",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
      <View
        key="1/.1"
        style={
          {
            "backgroundColor": "rgba(0,0,0,.2)",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
      <View
        key="2/.2"
        style={
          {
            "backgroundColor": "rgba(0,0,0,.2)",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
    </View>
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "left": 0,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "position": "absolute",
            "top": 0,
          },
          {
            "height": 1334,
            "width": 750,
          },
        ]
      }
    >
      <TouchableOpacity
        accessibilityLabel="Previous"
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        testID="PinarPrevButton"
      >
        <Text
          accessibilityLabel="Previous"
          accessible={true}
          style={
            {
              "color": "#333",
              "fontSize": 50,
              "padding": 20,
            }
          }
        >
          ‹
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityLabel="Next"
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        testID="PinarNextButton"
      >
        <Text
          accessibilityLabel="Next"
          accessible={true}
          style={
            {
              "color": "#333",
              "fontSize": 50,
              "padding": 20,
            }
          }
        >
          ›
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`basic options should support providing height and width 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "position": "relative",
      },
      {
        "maxHeight": 333,
        "maxWidth": 444,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": 333,
        "width": 444,
      }
    }
  >
    <ScrollView
      automaticallyAdjustContentInsets={false}
      bounces={false}
      horizontal={true}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      pagingEnabled={true}
      removeClippedSubviews={true}
      scrollEnabled={true}
      scrollEventThrottle={16}
      scrollsToTop={false}
      showsHorizontalScrollIndicator={false}
      showsVerticalScrollIndicator={false}
    >
      <View
        accessible={true}
        key="00"
        style={
          {
            "height": 333,
            "width": 444,
          }
        }
      >
        <View
          key=".0"
        >
          <Text>
            1
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        key="11"
        style={
          {
            "height": 333,
            "width": 444,
          }
        }
      >
        <View
          key=".1"
        >
          <Text>
            2
          </Text>
        </View>
      </View>
    </ScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 25,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        key="0/.0"
        style={
          {
            "backgroundColor": "#333",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
      <View
        key="1/.1"
        style={
          {
            "backgroundColor": "rgba(0,0,0,.2)",
            "borderRadius": 4,
            "height": 8,
            "marginBottom": 3,
            "marginLeft": 3,
            "marginRight": 3,
            "marginTop": 3,
            "width": 8,
          }
        }
      />
    </View>
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "left": 0,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
            "position": "absolute",
            "top": 0,
          },
          {
            "height": 333,
            "width": 444,
          },
        ]
      }
    >
      <View />
      <TouchableOpacity
        accessibilityLabel="Next"
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        testID="PinarNextButton"
      >
        <Text
          accessibilityLabel="Next"
          accessible={true}
          style={
            {
              "color": "#333",
              "fontSize": 50,
              "padding": 20,
            }
          }
        >
          ›
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;
